--- a/src/lab/exp1/content.html
+++ b/src/lab/exp1/content.html
@@ -90,7 +90,7 @@ mso-fareast-font-family:"Times New Roman";}
 
                             <p class="MsoNormal" style="line-height: 150%;">
 
-Mohr’s Circle is used to derive some basic formulas relating to the transformation of plane stress and
+Mohr&rsquo;s Circle is used to derive some basic formulas relating to the transformation of plane stress and
 was first introduced by the German engineer Otto Mohar (1835-1918) and hence is known as Mohr’s
 circle for plane stress. This method is based on simple geometric consideration and does not require
 the use of specialized formulas. While it was originally designed for graphical solutions, it lends itself
@@ -98,10 +98,10 @@ well to the use of a calculator.<br><br>
 Consider a square element of a material subjected to plane stress (figure.1.) and let <img src="../images/Mohr's circle/sARpMyGs.png" style="width:26px;height:36px ; position: relative; bottom: -15px; " ><!..$\sigma x$-->,<img src="../images/Mohr's circle/FaOoGA2r.png" style="width:26px;height:36px ; position: relative; bottom: -15px; " ><!--$\sigma y$-->, and <img src="../images/Mohr's circle/JsnrLTH4.png" style="width:33px;height:36px ; position: relative; bottom: -15px; " ><!-- $\tau xy$-->
 be the component of stress exerted on the element. We plot a point X of coordinates x and -xy, and
 a point Y of coordinates <img src="../images/Mohr's circle/FaOoGA2r.png" style="width:26px;height:36px ; position: relative; bottom: -15px; " > <!--$\sigma y$ -->and    +<img src="../images/Mohr's circle/JsnrLTH4.png" style="width:33px;height:36px ; position: relative; bottom: -15px; " > <!--+$\tau xy$-->. If <img src="../images/Mohr's circle/JsnrLTH4.png" style="width:33px;height:36px ; position: relative; bottom: -15px; " > is positive, as assumed in (figure.1.), point X is located
-below the σ axis and point Y above, as shown in (Figure.2.). If <img src="../images/Mohr's circle/JsnrLTH4.png" style="width:33px;height:36px ; position: relative; bottom: -15px; " >  is negative, X is located above the σ
+below the <img src="../images/CodeCogsEqn.gif"></img> axis and point Y above, as shown in (Figure.2.). If <img src="../images/Mohr's circle/JsnrLTH4.png" style="width:33px;height:36px ; position: relative; bottom: -15px; " >  is negative, X is located above the <img src="../images/CodeCogsEqn.gif"></img>
 axis and Y below. Joining X and Y by a straight line, we define the point C of intersection of line XY with
-the σ axis and draw the circle of the centre C and the diameter XY. Noting that the abscissa of C and
-radius of the circle are respectively equal to the quantities σave and R defined by equation
+the <img src="../images/CodeCogsEqn.gif"></img> axis and draw the circle of the centre C and the diameter XY. Noting that the abscissa of C and
+radius of the circle are respectively equal to the quantities <img src="../images/CodeCogsEqn.gif"></img><sub>ave</sub> and R defined by equation
 <br><br>
 
 <img src="../images/Mohr's circle/eqn 1.jpg" style="width:148px;height:65px ; position: relative; bottom: -15px; " > and <img src="../images/Mohr's circle/eqn 2.jpg" style="width:228px;height:86px ; position: relative; bottom: -15px; " > <br> <br>
@@ -109,8 +109,8 @@ radius of the circle are respectively equal to the quantities σave and R define
 
 <!--
 $\sigma ave=\frac{\sigma x+\sigma y}2$   and    $R=\sqrt{(\frac{\sigma x-\sigma y}2)^2+\tau^2xy}$<br>-->
-We conclude that the circle obtained is Mohr’s circle for plane stress. Thus the abscissa of points A and
-B where the circles intersect the σ axis represent respectively the principal stresses σmax and σmin at
+We conclude that the circle obtained is Mohr&rsquo;s circle for plane stress. Thus the abscissa of points A and
+B where the circles intersect the <img src="../images/CodeCogsEqn.gif"></img> axis represent respectively the principal stresses <img src="../images/CodeCogsEqn.gif"></img><sub>max</sub> and <img src="../images/CodeCogsEqn.gif"></img><sub>min</sub> at
 the point considered.
 
 <img  src= "../images/mc1.png" style="width:457px;height:499px"><br>
@@ -122,11 +122,12 @@ angles 2 that satisfies equation<br>
 
 
 <img src="../images/Mohr's circle/eqn 3.jpg" style="width:188px;height:66px ; position: relative; bottom: -15px; " ><br>
+<br>
 <!--
 $$\tan\left(2\theta p\right)=\frac{2tauxy}{\sigma x-\sigma y}$$-->
 Thus, the angle
 that defines in (figure.1.) the orientation of principle plane corresponds to point A in
-(figure.2.) can be obtained by dividing in half the angle XCA measured on Mohr’s Circle. We further
+(figure.2.) can be obtained by dividing in half the angle XCA measured on Mohr&rsquo;s Circle. We further
 observe that if > and > 0, as in the case considered here, the rotation which brings CX into
 CA is counterclockwise. But, in that case, the angle
 p obtained from equation<br>
@@ -137,10 +138,10 @@ $$\tan\left(2\theta p\right)=\frac{2tauxy}{\sigma x-\sigma y}$$-->
 And defining the direction of the normal Oa to the principal plane is positive; thus the rotation bringing
 Ox into Oa is also counter clockwise . we conclude that the senses of rotation in both parts of (figure.1
 and 2.) are the same; if a counterclockwise rotation through 2 p is required to bring CX into CA on
-Mohr’s circle, a counterclockwise rotation through p will bring Ox into Oa in (figure1.).<br><br>
-The construction of Mohr’s circle is greatly simplified if we consider separately each faces of the
+Mohr&rsquo;s circle, a counterclockwise rotation through p will bring Ox into Oa in (figure1.).<br><br>
+The construction of Mohr&rsquo;s circle is greatly simplified if we consider separately each faces of the
 element used to define the stress components. From (figure.3 and figure.4) its observed that, when
-the shear stress extend on a given face tends to rotate the element clockwise, the point on Mohr’s
+the shear stress extend on a given face tends to rotate the element clockwise, the point on Mohr&rsquo;s
 circle corresponding to that face is located above the S axis. When the shearing stress on a given face
 tends to rotate the element counterclockwise, the point corresponds to that face tends to rotate the
 element counterclockwise, the point corresponding to that face is located below the S axis. As far as
