--- a/src/lab/exp2/content.html
+++ b/src/lab/exp2/content.html
@@ -87,8 +87,8 @@ mso-fareast-font-family:"Times New Roman";}
 &lt;![endif]--></p>
 
                             <p class="MsoNormal" style="line-height: 150%;">
-                     Consider a beam AB of span ‘l’ subjected to a uniform bending moment M so that the beam deflects
-into an arc of circle. Let the deflection at the centre of the bean be ‘ ‘. If the beam is of uniform cross-<br>
+                     Consider a beam AB of span &lsquo;l&rsquo; subjected to a uniform bending moment M so that the beam deflects
+into an arc of circle. Let the deflection at the centre of the bean be &lsquo;<img src="../images/Bending stress/IHp0CJP6.png" style="padding-top:10px;"></img> &rsquo;. If the beam is of uniform cross-<br>
 section the moment of inertia I of its cross-section will be constant.<br>
 Using the bending formula<br><br>
 <img src="../images/Bending stress/eqn 1.jpg" style="width:168px;height:65px ; position: relative; bottom: -15px; " ><br><br>
