labs are at level 6

--- a/src/lab/exp2/content.html
+++ b/src/lab/exp2/content.html
@@ -358,13 +358,10 @@ mso-bidi-theme-font:minor-bidi;}
                         Simulator
                     </div>
 
-                    <div class="content" id=
-                    "experiment-article-section-4-content">
-                        <div class="divContent">
-                           <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="1400" width="800"><param name="quality" value="high" /><param name="movie" value="../images/swf/stressinbeams.swf" /><embed height="700" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="../images/swf/stressinbeams.swf" type="application/x-shockwave-flash" width="1000"></embed></object></p>
+                    
+                            <p style="padding-left:40px"><object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="600" width="800"><param name="quality" value="high" /><param name="movie" value="../images/swf/stressinbeams.swf" /><embed height="700" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="../images/swf/stressinbeams.swf" type="application/x-shockwave-flash" width="800"></embed></object></p>
 
-                        </div>
-                    </div>
+                      
 
 			
 
