--- a/src/lab/exp4/content.html
+++ b/src/lab/exp4/content.html
@@ -156,13 +156,9 @@ mso-fareast-font-family:"Times New Roman";}
                         Simulator
                     </div>
 
-                    <div class="content" id=
-                    "experiment-article-section-4-content">
-                        <div class="divContent">
-                           <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="600" width="1400"><param name="quality" value="high" /><param name="movie" value="../images/swf/deflectionofbeamconload.swf" /><embed height="700" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="../images/swf/deflectionofbeamconload.swf" type="application/x-shockwave-flash" width="1000"></embed></object></p>
+                   
+                          <p style="padding-left:40px">  <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="600" width="800"><param name="quality" value="high" /><param name="movie" value="../images/swf/deflectionofbeamconload.swf" /><embed height="600" pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="../images/swf/deflectionofbeamconload.swf" type="application/x-shockwave-flash" width="800"></embed></object></p>
 
-                        </div>
-                    </div>
 
 			
 
