strength-of-materials-nitk

--- a/src/lab/exp1/content.html
+++ b/src/lab/exp1/content.html
@@ -88,7 +88,7 @@ edit -->
 		B where the circles intersect the <img src="../images/CodeCogsEqn.gif"  style="width:16px;height:16px ; position: relative;  "></img> axis represent respectively the principal stresses <img src="../images/CodeCogsEqn.gif"   style="width:16px;height:16px ; position: relative;  "></img><sub>max</sub> and <img src="../images/CodeCogsEqn.gif"  style="width:16px;height:16px ; position: relative;  "></img><sub>min</sub> at
 		the point considered.
 
-		<img  src= "../images/mc1.png" style="width:457px;height:499px"><br>
+		<img  src= "../images/mc1.gif" style="width:457px;height:499px"><br>
 		We also note that, since <!--$\tan\left(XCA\right)=\frac{2tauxy}{\sigma x-\sigma y}$ --><img src="../images/Mohr's circle/ty37Xh1z.png" style="width:177px;height:59px ; position: relative; bottom: -15px; " >
 
 		(the angle XCA is eqal in magnitude to one of the
@@ -124,7 +124,7 @@ edit -->
 		positive and is plotted to the right, while a compressive stress is considered as negative and is plotted
 		to the left.
 
-		<img  src= "../images/mc3.png" style="width:764px;height:250px">
+		<img  src= "../images/mc3.gif" style="width:764px;height:250px">
 
 		</p>
 		</section>                        
