--- a/src/lab/exp2/content.html
+++ b/src/lab/exp2/content.html
@@ -75,7 +75,7 @@ edit -->
 		proportional to the flexural rigidity EI and inversely proportional to the bending moment.<br>
 
 
-		<img  src= "../images/bs21.png"style="width:761px;height:197px"><br><br>
+		<img  src= "../images/bs21.gif"style="width:761px;height:197px"><br><br>
 
 
 		<img src="../images/Bending stress/eqn 2.jpg" style="width:169px;height:34px ; position: relative; bottom: -15px; " > <br>
@@ -127,7 +127,7 @@ edit -->
 		Let the coordinates of the point P be (x,y) and be dx and dy the horizontal and vertical distances from<br>
 		P to Q, be dx and dy.<br>
 
-		<img  src= "../images/bs22.png"style="width:578px;height:367px"><br><br>
+		<img  src= "../images/bs22.gif"style="width:578px;height:367px"><br><br>
 		The slope of the beam over ds is given by <img src="../images/Bending stress/VROjUSv2.png" style="width:34px;height:54px ; position: relative; bottom: -15px; " ><br>
 
 		Let the tangent drawn at P to the curve, make an angle = with the x- axis<br>
@@ -181,7 +181,7 @@ edit -->
 		known as Eulers-Bernoulli equation and solution of this equation may be obtained by the ‘Double<br>
 		Integration Method’.<br>
 
-		<img  src= "../images/bs23.png"style="width:731px;height:319px"><br>
+		<img  src= "../images/bs23.gif"style="width:731px;height:319px"><br>
 		For curvature, if the curve is concaved forward the positive y-axis,<br>
 		<img src="../images/Bending stress/eqn 26.jpg" style="width:57px;height:53px ; position: relative; bottom: -15px; "> Since <img src="../images/Bending stress/eqn 27.jpg" style="width:82px;height:65px ; position: relative; bottom: -15px; " ><!--$\frac{dy^2}{dx^2}$ > 0--> hence it is taken as positive.<br><br>
 		Conversely if the curve is concaved towards the negative y-axis then<br>
@@ -189,7 +189,7 @@ edit -->
 		From the above sign convention it follows that if the coordinate axes are chosen as shown in<br>
 		figure.2.(a) the elastic curve equation may be written in the general form as  <img src="../images/Bending stress/eqn 30.jpg" style="width:104px;height:55px ; position: relative; bottom: -15px; " >  <!--$EI\frac{dy^2}{dx^2}=M$--><br>
 
-		<img src= "../images/bs7.png" style="width:816px;height:321px"><br>
+		<img src= "../images/bs7.gif" style="width:816px;height:321px"><br>
 
 		</p>
 	</section>
@@ -206,22 +206,25 @@ edit -->
 		<div class="content" id="experiment-article-section-2-content">
 		<div class="divContent">
 								  
-		<h3 style="color: red;">&nbsp;</h3>
-
-		<h3 style="color: red;">&nbsp;</h3>
-
-		<h3 style="color: red;">
-		<big></big>
-		</h3>
-
-		<h3 style="color: red;"><big>
-		</big></h3>
-
-		<h3 style="color: red;">&nbsp;</h3>
+		
 
 		<p class="MsoNormal" style="line-height: 150%;">
-		<span lang="EN-IN" style='font-size: 12pt; line-height: 150%; font-family: "Arial","sans-serif";'>
-		&nbsp;<b></b></span></p>
+		1.	When you click on the bending stress file, a window will open as shown below.
+		</p></br>
+		<img src= "../images/Picture1.png" style="width:616px;height:321px"><br>
+		<p class="MsoNormal" style="line-height: 150%;">
+		2.	Adjust the depth of the beam by clicking on the triangle shown within the circle
+		</p></br>
+		<img src= "../images/Picture2.png" style="width:616px;height:321px"><br>
+		<p class="MsoNormal" style="line-height: 150%;">
+		3.	After adjusting the depth then adjust the required breadth by clicking on triangle within the circle shown.
+		</p></br>
+		<img src= "../images/Picture3.png" style="width:616px;height:321px"><br>
+		<p class="MsoNormal" style="line-height: 150%;">
+		1.	When you click on the bending stress file, a window will open as shown below.
+		</p></br>
+		<img src= "../images/Picture4.png" style="width:616px;height:321px"><br>
+
 
 		<p class="MsoNormal" style="font-weight: bold; line-height: 150%">
 		<span lang="EN-IN" style='font-size: 12pt; line-height: 150%; font-family: "Arial","sans-serif";'>
