--- a/src/lab/exp6/content.html
+++ b/src/lab/exp6/content.html
@@ -127,43 +127,54 @@ edit -->
 			
 			<table border="1">
 			  <tr>
-				<th>Dimensions</th>
-				<th>Nominal</th>
-				<th>Tolerance</th>
+				<th rowspan="2"><br>Dimensions(U-Notch)</th>
+				<th rowspan="2"><br>Nominal <br></th>
+				<th colspan="2">Machining Tolerance</th>
+			  </tr>
+			  <tr>
+				<td>Ferrous test piece</td>
+				<td>Non-ferrous test piece</td>
 			  </tr>
 			  <tr>
 				<td>Length</td>
 				<td>55 mm</td>
 				<td>± 0.60 mm</td>
+				<td>± 0.5 mm</td>
 			  </tr>
 			  <tr>
 				<td>Width</td>
 				<td>10 mm</td>
 				<td>± 0.11 mm</td>
+				<td>± 0.05 mm</td>
 			  </tr>
 			  <tr>
 				<td>Thickness</td>
 				<td>10 mm</td>
-				<td>± 0.06 mm</td>
+				<td>± 0.11 mm</td>
+				<td>± 0.025 mm</td>
 			  </tr>
 			  <tr>
 				<td>Depth below notch</td>
 				<td>5 mm</td>
 				<td>± 0.09mm</td>
+				<td>± 0.05 mm</td>
 			  </tr>
 			  <tr>
 				<td>Root radius</td>
 				<td>1 mm</td>
+				<td>± 0.07 mm</td>
 				<td>± 0.07 mm</td>
 			  </tr>
 			  <tr>
 				<td>Distance of notch from end of test specimen</td>
 				<td>27.5 mm</td>
 				<td>± 0.42 mm</td>
+				<td>± 0.25 mm</td>
 			  </tr>
 			  <tr>
-				<td>Angle between plane of symmetry of notch<br> and<br>longitudinal axis of test specimen</td>
+				<td>Angle between plane of symmetry <br>of notch and longitudinal axis of test specimen</td>
 				<td>90°</td>
+				<td>± 2°</td>
 				<td>± 2°</td>
 			  </tr>
 			</table>
