--- a/src/lab/exp2/content.html
+++ b/src/lab/exp2/content.html
@@ -213,11 +213,11 @@ edit -->
 		</p></br>
 		<img src= "../images/Picture_1bsp.png" style="width:616px;height:321px"><br>
 		<p class="MsoNormal" style="line-height: 150%;">
-		2.	Adjust the depth of the beam by clicking on the triangle shown within the circle
+		2.	Adjust the depth of the beam by clicking on the TRIANGLE shown within the circle
 		</p></br>
 		<img src= "../images/Picture_2bsp.png" style="width:616px;height:321px"><br>
 		<p class="MsoNormal" style="line-height: 150%;">
-		3.	After adjusting the depth then adjust the required breadth by clicking on triangle within the circle shown.
+		3.	After adjusting the depth then adjust the required breadth by clicking on TRIANGLE within the circle shown.
 		</p></br>
 		<img src= "../images/Picture_3bsp.png" style="width:616px;height:321px"><br>
 		<p class="MsoNormal" style="line-height: 150%;">
@@ -228,7 +228,7 @@ edit -->
 
 		<p class="MsoNormal" style="font-weight: bold; line-height: 150%">
 		<span lang="EN-IN" style='font-size: 12pt; line-height: 150%; font-family: "Arial","sans-serif";'>
-		&nbsp;</span></p>
+		</span></p>
 
 		<p class="MsoNormal" style="line-height: 150%;">
 		<b><span lang="EN-IN" style='font-size: 12pt; line-height: 150%; font-family: "Arial","sans-serif";'>
@@ -298,7 +298,16 @@ edit -->
 		<p>&nbsp;</p>
 		<p><!-- p { margin-bottom: 0.21cm; } -->
 		</p>
-		<p style="margin-bottom: 0cm;">&nbsp;</p>
+		<p style="margin-bottom: 0cm;">
+		<ul>
+		<li>Define bending stress?</li>
+		<li>Write bending stress equation?</li>
+		<li>State the assumptions of simple bending theory?</li>
+		<li>Define section modulus?</li>
+
+		</ul>
+		
+		</p>
 
 		<p><span style="font-family: arial,helvetica,sans-serif; font-size: medium; color: rgb(0, 0, 0);">
 		<br></span></p>
@@ -325,20 +334,19 @@ edit -->
 								   
 		<p class="MsoNormal" style="line-height: normal;">
 		<span style='font-size: 12pt; font-family: "Arial","sans-serif";'>
-		&nbsp;</span> F.P. Beer and E.R. Johnston, Mechanics of Materials, Tata McGraw – Hill.<br>
+		</span> 
+		F.P. Beer and E.R. Johnston, Mechanics of Materials, Tata McGraw – Hill.<br>
 
-		F.L. Singer. Strength of Materials, Harper and Row Publishers.<br>
+	
 		Hearns E.J., Mechanics of Materials, Pergaman Press.<br>
-		Gere and Timoshenko, Mechanics of Materials, CBS Publishers & Distributors.<br>
-		F.P. Beer and E.R. Johnston, Mechanics for Engineers – Statics & Dynamics, Tata McGraw – Hill.<br>
+		
 		F.L. Singer. Engineering Mechanics – Statics and Dynamics, Harper and Row Publishers.<br>
 		J.L. Marium and L.G. Kraige, Engineering Mechanics – Vol I & II, John Wiley & Sons.<br>
 		S.P. Timoshenko and D.H. Young, Engineering Mechanics, McGraw – Hill.<br>
 		I.H. Shames, Engineering Mechanics – Statics and Dynamics,  Prentice Hall of India.<br>
 		S.S. Bhavikatti and K.G. Rajashekarappa, Engineering Mechanics, Wiley Eastern Ltd.<br>
 		S.S. Bhavikatti and A.V. Hegde, Engineering Mechanics - Problems and Solutions.<br>
-		Material Testing by Davis<br>
-		Mechanical Metallurgy by Diater</p>
+		
 
 		<p class="MsoNormal" style="line-height: normal;">
 		<span style='font-size: 12pt; font-family: "Arial","sans-serif";'>
