--- a/src/lab/exp9/content.html
+++ b/src/lab/exp9/content.html
@@ -84,7 +84,7 @@ edit -->
 			than 10 mm/min. The maximum load divided by the combined cross-sectional area of the two planes gives the double shear strength. This shall be 
 			calculated from the following formula:</br></br>
 			
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/img_5pt.png" style="width:300px;height:50px ; position:relative; bottom: -15px"> </br></br></br>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/img_5pt.png" style="width:200px;height:38px ; position:relative; bottom: -15px"> </br></br></br>
 			
 			<b>Practical cases of shear failure:</b></br></br>
 			<p>
@@ -234,7 +234,16 @@ edit -->
 			<div class="divContent">
 									  
 			<p><!-- p { margin-bottom: 0.21cm; } --></p>
-			<p style="margin-bottom: 0cm;">&nbsp;</p>
+			<p style="margin-bottom: 0cm;">
+			
+			<ul>
+			<li>Write a formula for double shear strength?</li>
+			<li>How the specimen breaks in double shear?</li>
+			<li>What is shear strength?</li>
+			<li>What is the difference between single shear and double shear failure?</li>
+			<li>Is the direct shear stresses are same in single and in double shear?</li>
+			</ul>
+			</p>
 			<p style="margin-bottom: 0cm;">&nbsp;</p>
 
 			<p><span style="font-family: arial,helvetica,sans-serif; font-size: medium; color: rgb(0, 0, 0);">
@@ -258,20 +267,14 @@ edit -->
 									   
 			<p class="MsoNormal" style="line-height: normal;">
 			<span style='font-size: 12pt; font-family: "Arial","sans-serif";'>
-			&nbsp;</span> 
-			F.P. Beer and E.R. Johnston, Mechanics of Materials, Tata McGraw – Hill.<br>
-			F.L. Singer. Strength of Materials, Harper and Row Publishers.<br>
-			Hearns E.J., Mechanics of Materials, Pergaman Press.<br>
-			Gere and Timoshenko, Mechanics of Materials, CBS Publishers & Distributors.<br>
-			F.P. Beer and E.R. Johnston, Mechanics for Engineers – Statics & Dynamics, Tata McGraw – Hill.<br>
-			F.L. Singer. Engineering Mechanics – Statics and Dynamics, Harper and Row Publishers.<br>
-			J.L. Marium and L.G. Kraige, Engineering Mechanics – Vol I & II, John Wiley & Sons.<br>
-			S.P. Timoshenko and D.H. Young, Engineering Mechanics, McGraw – Hill.<br>
-			I.H. Shames, Engineering Mechanics – Statics and Dynamics,  Prentice Hall of India.<br>
+			</span> 
+			IS 5242 (1979): Method of Test for Determining Shear Strength of Metals, First Revision, 2006.<br>
+			Hearn E,J., Mechanics of Material, Pergaman Press, England, 1972.</br>
+			Beer and Johnston E.R., Mechanics of Material, 3rd Edition, Tata McGraw Hill,New-Delhi, 2007.</br>
+			YEN C.S, Stress distribution in a single shear sheet specimen, ASTM International, September 3rd, 2015.</br>
+			Gambhir , Building and Construction Materials, 2014.</br>
 			S.S. Bhavikatti and K.G. Rajashekarappa, Engineering Mechanics, Wiley Eastern Ltd.<br>
-			S.S. Bhavikatti and A.V. Hegde, Engineering Mechanics - Problems and Solutions.<br>
-			Material Testing by Davis<br>
-			Mechanical Metallurgy by Diater</p>
+			
 
 			<h2><span style="color: rgb(51, 102, 255);">&nbsp;</span></h2>
 			<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
