updated lab experiments

--- a/src/lab/exp4/content.html
+++ b/src/lab/exp4/content.html
@@ -64,7 +64,7 @@
 			The curve showing the deflected shape with the applied load is known as the elastic curve of the beam.</br></br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/Picture1_1.png" style="width:550px;height:345px ; position:relative; bottom: -15px"> </br></br>
 			The above figure shows the elastic curve of a loaded simple beam. On the elastic curve tangents are drawn on points A and B as shown in figure. 
-			Total angle between the two tangents is denoted as ϴAB. In order to find out ϴAB,
+			Total angle between the two tangents is denoted as ϴ<sub>AB</sub>. In order to find out ϴ<sub>AB</sub>,
 			consider the incremental change in angle over an infinitesimal segment dx located at a distance of x from point B. 
 			The bending moment and radius of curvature for any section of the beam is given by the usual bending equation.</br></br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/Picture2_1.png" style="width:80px;height:45px ; position:relative; bottom: -15px">--------------1.2 </br></br>
@@ -78,7 +78,7 @@
 			dx = dϴ × R  --------------1.2</br></br>
 			Substituting R value from equation &nbsp;1.2&nbsp; in equation&nbsp; 1.1 &nbsp;</br></br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/Picture3_1.png" style="width:75px;height:45px ; position:relative; bottom: -15px"> --------------1.3 </br></br>
-			The total angle change ϴAB can be obtained by integrating Eq. (1.3) between points A and B which is expressed as</br></br>
+			The total angle change ϴ<sub>AB</sub> can be obtained by integrating Eq. (1.3) between points A and B which is expressed as</br></br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/Picture_4a.png" style="width:170px;height:50px ; position:relative; bottom: -15px"></br></br>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/Picture_5.png" style="width:300px;height:45px ; position:relative; bottom: -15px"></br></br>
 			The difference of slope between any two points on a continuous elastic curve of a beam is equal to the area under the M / EI diagram between these points.</br>
@@ -260,7 +260,7 @@
 
 			
 
-			Dieter,G E ,Mechanical Metallurgy, SI Metric Edition, McGraw – Hill.</p>
+			G.E. Dieter, Mechanical Metallurgy, SI Metric Edition, McGraw – Hill.</p>
 
 			<meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 			<meta content="Word.Document" name="ProgId">
