--- a/src/lab/exp6/content.html
+++ b/src/lab/exp6/content.html
@@ -374,7 +374,7 @@ edit -->
 				John M. Holt, Charpy Impact Test: Factors and Variables, Issue 1072, ASTM International, 1990.</br>
 				Hearn E,J., Mechanics of Material, Pergaman Press, England, 1972.</br>
 				Beer and Johnston E.R., Mechanics of Material, 3rd Edition, Tata McGraw Hill, New-Delhi, 2007. </br>
-				Dieter,G E, Mechanical Metallurgy, SI Metric Edition, McGraw – Hill.</p>
+				G.E. Dieter, Mechanical Metallurgy, SI Metric Edition, McGraw – Hill.</p>
 				
 				</p>
 				<h2><span style="color: rgb(51, 102, 255);">&nbsp;</span></h2>
