--- a/src/lab/exp8/content.html
+++ b/src/lab/exp8/content.html
@@ -93,7 +93,7 @@ edit -->
 					however, longitudinal shear is a common failure mode in an overloaded beam. This longitudinal shear is maximum at the neutral plane
 					and decreases toward the upper and lower surfaces.</br>
 					Finally, RL and TL shear are the two kinds of transverse shear. Except for certain brittle softwoods, like western red cedar, wood
-					very rarely fails in transverse shear: it will undergo tensile failure first.</br></br>
+					very rarely fails in transverse shear, it will undergo tensile failure first.</br></br>
 					
 					<b>TEST SPECIMEN:</b>  </br></br>
 					The specimens are usually in the form of small, clear, straight-grained blocks with a projecting tenon or lip to be sheared off.
@@ -109,7 +109,7 @@ edit -->
 					<b>RELEVANT INDIAN STANDARD FOR DIRECT SHEAR TEST:</b></br></br>
 					<ol type="1">
 						<li>
-							S 1708-(part 11)- Methods of testing of small clear specimens of timber.
+							IS 1708-(part 11)- Methods of testing of small clear specimens of timber.
 						</li
 					</ol>
 				</p>
