--- a/src/lab/exp9/content.html
+++ b/src/lab/exp9/content.html
@@ -125,7 +125,7 @@ edit -->
 				STEPS: </br></br>
 				<ol type="1">
 					
-					<li>Double click on the direct shear test on mild steel plate file , a window will open as shown below.</br></br>
+					<li>Click on the direct shear test on mild steel plate file , a window will open as shown below.</br></br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/img_1pp.png" style="width:450px;height:350px ; position:relative; bottom: -15px"> </br></br></br>
 					
 					</li>
