--- a/src/lab/exp7/content.html
+++ b/src/lab/exp7/content.html
@@ -126,7 +126,7 @@ edit -->
 			STEPS: </br></br>
 			<ol type="1">
 			
-				<li>Double click on the direct shear test on mild steel rod file, a window will open as shown below.</br></br>
+				<li>Click on the direct shear test on mild steel rod file, a window will open as shown below.</br></br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img  src= "../images/img_1pr.png" style="width:450px;height 400px ; position:relative; bottom: -15px"> </br></br></br>
 			
 				</li>
