--- a/src/lab/images/Rockwell/rockwell.html
+++ b/src/lab/images/Rockwell/rockwell.html
@@ -38,7 +38,7 @@ var lnt=0;
 <p class="incanvas" style="font-family:verdana; font-size:14px;">To find the Rockwell hardness number of mild steel, cast iron, brass, aluminium and spring steel etc.</p><br/>
 <h4 class="incanvas" style="font-family:verdana;">Apparatus used:</h4>
 <p class="incanvas" style="font-family:verdana; font-size:14px;">Rockwell hardness testing machine</p>
-<img id="" style="position: absolute; width:30%; left: 250px; top: 100px;" src="images/1.png"/>
+<img id="" style="position: absolute; width:30%; left: 250px; top: 100px;" src="Images/1.png"/>
 </div>
 
 
