--- a/src/lab/images/Rockwell/rockwell.html
+++ b/src/lab/images/Rockwell/rockwell.html
@@ -52,25 +52,25 @@ var lnt=0;
 <p id="p1-1" style="position:absolute; left: 10px; top:70px;  font-family:verdana; font-size:14px; visibility:hidden;">Selected material :</p>
 <p id="p1-2" style="position:absolute; left: 140px; top:70px; color:#FC0D05;  font-family:verdana; font-size:14px; visibility:hidden;"></p>
 
-<img id="ci" style="position:absolute; left:20px; top:140px; cursor:pointer;" src="images/ci.png" />
+<img id="ci" style="position:absolute; left:20px; top:140px; cursor:pointer;" src="Images/ci.png" />
 <p id="p2" style="position:absolute; left:25.5px; top:160px; font-family:verdana; cursor:pointer; font-size:14px; ">Cast Iron</p>
 
-<img id="ms" style="position:absolute; left:160px; top:140px; cursor:pointer;" src="images/ms.png" />
+<img id="ms" style="position:absolute; left:160px; top:140px; cursor:pointer;" src="Images/ms.png" />
 <p id="p3" style="position:absolute; left:167px; top:160px; font-family:verdana; font-size:14px; cursor:pointer;">Mild Steel</p>
 
-<img id="ss" style="position:absolute; left:300px; top:140px; cursor:pointer;" src="images/ss.png" />
+<img id="ss" style="position:absolute; left:300px; top:140px; cursor:pointer;" src="Images/ss.png" />
 <p id="p6" style="position:absolute; left:315px; top:155px; font-family:verdana; font-size:14px; cursor:pointer;">Spring<br/>&nbsp;Steel</p>
 
-<img id="br" style="position:absolute; left:435px; top:140px; cursor:pointer;" src="images/br.png" />
+<img id="br" style="position:absolute; left:435px; top:140px; cursor:pointer;" src="Images/br.png" />
 <p id="p4" style="position:absolute; left:452px; top:160px; font-family:verdana; font-size:14px; cursor:pointer;">Brass</p>
 
-<img id="al" style="position:absolute; left:570px; top:140px; cursor:pointer;" src="images/Al.png" />
+<img id="al" style="position:absolute; left:570px; top:140px; cursor:pointer;" src="Images/Al.png" />
 <p id="p5" style="position:absolute; left:575px; top:160px; font-family:verdana; font-size:14px; cursor:pointer;">Aluminium</p>
 
 <p id="p7" style="position:absolute; left: 10px; top:250px; font-family:verdana; font-size:14px; cursor:pointer; visibility:hidden;">Type of indentor to be used : </p>
 <p id="p8" style="position:absolute; color:#FC0D05; left: 220px; top:250px; font-family:verdana; font-size:14px; cursor:pointer; visibility:hidden;"></p>
-<img id="ball" style="position:absolute; width:15%; left:100px; top:300px; visibility:hidden; " src="images/ball.png" />
-<img id="cone" style="position:absolute;  left:100px; top:310px; visibility:hidden; " src="images/cone.png" />
+<img id="ball" style="position:absolute; width:15%; left:100px; top:300px; visibility:hidden; " src="Images/ball.png" />
+<img id="cone" style="position:absolute;  left:100px; top:310px; visibility:hidden; " src="Images/cone.png" />
 </div> 
 
 
@@ -79,23 +79,23 @@ var lnt=0;
 <strong id="titlestep" class="incanvas">STEP &nbsp;</strong> 
 <span class="circlebg" id="stepnumber">&nbsp;2&nbsp;</span>
 <p id="pumptext-2" class="steptext" style="font-family:verdana; font-size:14px; ">&nbsp;The hand wheel is turned until the specimen is in contact with the indenter and the pointer of the smaller dial gauge reaches the RED DOT so that minor load of 10kg is applied.</p> 
-<img id="2-0" style="position: absolute; left: 370px; top: 100px;" src="images/2.png"/>
-<img id="2-3" style="position:absolute; left:554px; top:343px; " src="images/unload.png" />
-<img id="2-10" style="position:absolute; left:398px; top:406px;  " src="images/a12.png" /> 
-<img id="2-101" style="position:absolute; left:401px; top:406px;  visibility:hidden;" src="images/a12.png" /> 
-<img id="2-102" style="position:absolute; left:401px; top:406px;  visibility:hidden;" src="images/a12.png" /> 
-<img id="w" style="position:absolute; left:392px; top:406px;  " src="images/w.png" /> 
-<img id="2-01" style="position: absolute; left: 402px; top: 398px;" src="images/12.png"/>
-<img id="2-6" style="position:absolute; left:567px; top:256px; " src="images/3.png" />
-<img id="2-1" style="position: absolute; width:40%; left: 0px; top: 110px;" src="images/clock3.png"/>
-<img id="2-1n" style="position: absolute; left: 52.5px; top: 262px; visibility:hidden;" src="images/needle2.png"/>
-<img id="2-1n2" style="position: absolute; left: 139px; top: 170px; visibility:hidden;" src="images/needle3.png"/>
-<img id="2-2" style="position: absolute; left: 132.5px; top: 220px;" src="images/needle1.png"/>
-<img id="2-21" style="position: absolute; left: 132.5px; top: 220px; visibility:hidden;" src="images/needle1.png"/>
-<img id="2ci" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="images/ci2.png" />
-<img id="2br" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="images/br2.png" />
-<img id="2al" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="images/al2.png" />
-<img id="2ms" style="position:absolute; left:408px; top:256.50px; visibility:hidden;" src="images/ms2.png" />
+<img id="2-0" style="position: absolute; left: 370px; top: 100px;" src="Images/2.png"/>
+<img id="2-3" style="position:absolute; left:554px; top:343px; " src="Images/unload.png" />
+<img id="2-10" style="position:absolute; left:398px; top:406px;  " src="Images/a12.png" /> 
+<img id="2-101" style="position:absolute; left:401px; top:406px;  visibility:hidden;" src="Images/a12.png" /> 
+<img id="2-102" style="position:absolute; left:401px; top:406px;  visibility:hidden;" src="Images/a12.png" /> 
+<img id="w" style="position:absolute; left:392px; top:406px;  " src="Images/w.png" /> 
+<img id="2-01" style="position: absolute; left: 402px; top: 398px;" src="Images/12.png"/>
+<img id="2-6" style="position:absolute; left:567px; top:256px; " src="Images/3.png" />
+<img id="2-1" style="position: absolute; width:40%; left: 0px; top: 110px;" src="Images/clock3.png"/>
+<img id="2-1n" style="position: absolute; left: 52.5px; top: 262px; visibility:hidden;" src="Images/needle2.png"/>
+<img id="2-1n2" style="position: absolute; left: 139px; top: 170px; visibility:hidden;" src="Images/needle3.png"/>
+<img id="2-2" style="position: absolute; left: 132.5px; top: 220px;" src="Images/needle1.png"/>
+<img id="2-21" style="position: absolute; left: 132.5px; top: 220px; visibility:hidden;" src="Images/needle1.png"/>
+<img id="2ci" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="Images/ci2.png" />
+<img id="2br" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="Images/br2.png" />
+<img id="2al" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="Images/al2.png" />
+<img id="2ms" style="position:absolute; left:408px; top:256.50px; visibility:hidden;" src="Images/ms2.png" />
 
 <p id="p2-1" style="position:absolute; left:230px; top:370px; font-family:verdana; font-size:10px; ">Move the mouse on the<br/> wheel to adjust <br/>specimen height</p> 
 <p id="2-4" style="position:absolute; left:320px; top:233px; font-family:verdana; visibility:hidden; font-size:9px; ">Minor load of 10kg </br>is applied</p> 
@@ -108,32 +108,32 @@ var lnt=0;
 <strong id="titlestep" class="incanvas">STEP &nbsp;</strong> 
 <span class="circlebg" id="stepnumber">&nbsp;3&nbsp;</span>
 <p id="pumptext-2" class="steptext" style="font-family:verdana; font-size:14px; ">&nbsp;Based on the material the major load is set & the motor is switched ON. The hand lever is kept in load position. The reading is noted down using B-scale or C-scale based on indentor used.</p>  
-<img id="3-0" style="position: absolute; left: 370px; top: 100px;" src="images/2.png"/>
-<img id="3-1" style="position: absolute; width:40%; left: 0px; top: 110px;" src="images/clock3.png"/>
-<img id="3-2" style="position: absolute; left: 132.5px; top: 220.5px;" src="images/needle1.png"/>
-<img id="3-3" style="position:absolute; left:567px; top:256px; cursor:pointer; " src="images/3.png" />
-<img id="3-31" style="position:absolute; left:115px; top:219.75px; " src="images/clock1.png" />
-<img id="3-1n" style="position: absolute; left: 52.5px; top: 262px; visibility:hidden;" src="images/needle2.png"/>
-<img id="3-1n1" style="position: absolute; left: 52.5px; top: 262px; visibility:hidden;" src="images/needle2.png"/>
-<img id="3-1n2" style="position: absolute; left: 139px; top: 170px; visibility:hidden;" src="images/needle3.png"/>
-<img id="3-1n21" style="position: absolute; left: 139px; top: 170px; visibility:hidden;" src="images/needle3.png"/>
-<img id="3-4" style="position:absolute; left:570px; top:227px; visibility:hidden;" src="images/hand.png" />
-<img id="3-41" style="position:absolute; left:570px; top:227px; visibility:hidden;" src="images/hand.png" />
-<img id="3-5" style="position:absolute; left:554px; top:343px; cursor:pointer; visibility:hidden;" src="images/unload.png" />
-<img id="3-6" style="position:absolute; left:554px; top:343px; cursor:pointer; visibility:hidden;" src="images/load.png" />
-<img id="3-7" style="position:absolute; width:20%; left:600px; top:100px; visibility:hidden;" src="images/clock2.png" />
-<img id="3-8" style="position:absolute;  left:668.5px; top:122px; visibility:hidden;" src="images/needle.png" />
-<img id="3ci" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="images/ci2.png" />
-<img id="3br" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="images/br2.png" />
-<img id="3al" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="images/al2.png" />
-<img id="3ms" style="position:absolute; left:408px; top:256.50px; visibility:hidden;" src="images/ms2.png" />
+<img id="3-0" style="position: absolute; left: 370px; top: 100px;" src="Images/2.png"/>
+<img id="3-1" style="position: absolute; width:40%; left: 0px; top: 110px;" src="Images/clock3.png"/>
+<img id="3-2" style="position: absolute; left: 132.5px; top: 220.5px;" src="Images/needle1.png"/>
+<img id="3-3" style="position:absolute; left:567px; top:256px; cursor:pointer; " src="Images/3.png" />
+<img id="3-31" style="position:absolute; left:115px; top:219.75px; " src="Images/clock1.png" />
+<img id="3-1n" style="position: absolute; left: 52.5px; top: 262px; visibility:hidden;" src="Images/needle2.png"/>
+<img id="3-1n1" style="position: absolute; left: 52.5px; top: 262px; visibility:hidden;" src="Images/needle2.png"/>
+<img id="3-1n2" style="position: absolute; left: 139px; top: 170px; visibility:hidden;" src="Images/needle3.png"/>
+<img id="3-1n21" style="position: absolute; left: 139px; top: 170px; visibility:hidden;" src="Images/needle3.png"/>
+<img id="3-4" style="position:absolute; left:570px; top:227px; visibility:hidden;" src="Images/hand.png" />
+<img id="3-41" style="position:absolute; left:570px; top:227px; visibility:hidden;" src="Images/hand.png" />
+<img id="3-5" style="position:absolute; left:554px; top:343px; cursor:pointer; visibility:hidden;" src="Images/unload.png" />
+<img id="3-6" style="position:absolute; left:554px; top:343px; cursor:pointer; visibility:hidden;" src="Images/load.png" />
+<img id="3-7" style="position:absolute; width:20%; left:600px; top:100px; visibility:hidden;" src="Images/clock2.png" />
+<img id="3-8" style="position:absolute;  left:668.5px; top:122px; visibility:hidden;" src="Images/needle.png" />
+<img id="3ci" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="Images/ci2.png" />
+<img id="3br" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="Images/br2.png" />
+<img id="3al" style="position:absolute; left:408px; top:256.5px; visibility:hidden;" src="Images/al2.png" />
+<img id="3ms" style="position:absolute; left:408px; top:256.50px; visibility:hidden;" src="Images/ms2.png" />
 
-<img id="3-12" style="position:absolute; left:551.5px; top:119.5px;" src="images/35.png"/> 
-<img id="3-121" style="position:absolute; left:551.5px; top:119.5px;" src="images/35.png"/> 
-<img id="3-10" style="position:absolute; left:551.5px; top:119.5px;" src="images/33.png"/> 
-<img id="3-101" style="position:absolute; left:551.5px; top:119.5px;" src="images/33.png"/> 
-<img id="3-11" style="position:absolute; left:551.5px; top:119px;" src="images/34.png"/> 
-<img id="3-9" style="position:absolute; left:580px; top:100px;" src="images/31.png"/> 
+<img id="3-12" style="position:absolute; left:551.5px; top:119.5px;" src="Images/35.png"/> 
+<img id="3-121" style="position:absolute; left:551.5px; top:119.5px;" src="Images/35.png"/> 
+<img id="3-10" style="position:absolute; left:551.5px; top:119.5px;" src="Images/33.png"/> 
+<img id="3-101" style="position:absolute; left:551.5px; top:119.5px;" src="Images/33.png"/> 
+<img id="3-11" style="position:absolute; left:551.5px; top:119px;" src="Images/34.png"/> 
+<img id="3-9" style="position:absolute; left:580px; top:100px;" src="Images/31.png"/> 
 
 <p id="status" style="position:absolute; left: 10px; top:450px; font-family:verdana; font-size:14px;  visibility:hidden;">Rockwell Hardness number = </p>
 <p id="status2" style="position:absolute; left: 10px; top:450px; font-family:verdana; font-size:14px; visibility:hidden;">Rockwell Hardness number = </p>
@@ -182,7 +182,7 @@ var lnt=0;
 </table>
 <p id="status3" style="position:absolute; left:60px; top:300px; font-family:verdana; font-size:14px; visibility:hidden;">Average Rockwell Hardness number = </p>
 <p id="status4" style="position:absolute; left:340px; top:300px;text-decoration:underline; border-bottom:1px solid black; font-family:verdana; font-size:14px; visibility:hidden;"></p>
-<img id="66" style="position:absolute; left:554px; top:343px; visibility:hidden;" src="images/white.png" />
+<img id="66" style="position:absolute; left:554px; top:343px; visibility:hidden;" src="Images/white.png" />
 </div>
 
 <div id="">	
@@ -192,12 +192,12 @@ var lnt=0;
 
 <!--next  Arrow	-->	
 <div id="nav">
-	<img id="nextButton" onclick="navNext(); " src="images/Next.png" />
+	<img id="nextButton" onclick="navNext(); " src="Images/Next.png" />
 </div>
 
 
 <!--Blinking Arrow	-->	
-<img class ="" id="arrow1" style="visibility:hidden;" src="images/arrow1.png"/>
+<img class ="" id="arrow1" style="visibility:hidden;" src="Images/arrow1.png"/>
 
 <div id="copyright"> &copy; 2016 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Applied Mechanics & Hydraulics</div>
 
