--- a/src/lab/images/DSSTimber/index.html
+++ b/src/lab/images/DSSTimber/index.html
@@ -126,7 +126,7 @@
 <div class="simsubscreen" id="canvas5" style="visibility:hidden">
 <strong class="incanvas">STEP &nbsp;</strong><span class="circlebg">&nbsp;5&nbsp;</span>
 <p class="steptext" style="font-family:verdana; font-size:14px;">&nbsp;Observation and Result.</p>
-<form id="lastform">
+<form id="lastform" style="visibility:visible">
 <table border="border" id="last1" style="position:absolute;font-family:verdana; font-size:14px;left:0px;top:100px;cellspacing:10px;">
 <tr>
 	<th>Width of the failure plane 'w' (mm)</th>
