--- a/src/lab/images/Tensionci/index.html
+++ b/src/lab/images/Tensionci/index.html
@@ -215,31 +215,31 @@
 		</tr>
 	</table>
 	</div>
-	<div id="mydiv3" style="position:absolute;left:5px; top:30px;height: 500px;width:700px;"></div>
-	<input type="button" id="obs1" value="Observation" style="position:absolute;font-family:verdana; font-size:14px;left:315px;top:450px;cursor:pointer;">
-	<input type="button" id="gr1" value="Graph" style="position:absolute;font-family:verdana; font-size:14px;left:415px;top:450px;cursor:pointer;">
-	<input type="button" id="check" value="Check" style="position:absolute;font-family:verdana; font-size:14px;left:515px;top:450px;cursor:pointer;">
-	<form id="calc" class="cc">
+	<div id="mydiv3" style="position:absolute;left:5px; top:30px;height: 500px;width:700px;display:none"></div>
+	<input type="button" id="obs1" value="Observation" style="position:absolute;font-family:verdana; font-size:14px;left:315px;top:450px;cursor:pointer;" onclick="viewObservation()">
+	<input type="button" id="gr1" value="Graph" style="position:absolute;font-family:verdana; font-size:14px;left:415px;top:450px;cursor:pointer;" onclick="viewGraph()">
+	<input type="button" id="check" value="Check" style="position:absolute;font-family:verdana; font-size:14px;left:515px;top:450px;cursor:pointer;" onmouseover="viewTooltip()" onclick="checkResult()">
+	<form id="calc">
 		<table border="border" id="last" style="position:absolute;font-family:verdana; font-size:14px;left:100px;top:150px;cellpadding:10px;cellspacing:10px;text-align: center">
 			<tr>
 				<th>Proof  Stress(N/mm<sup>2</sup>)</th>
-				<td id="t33"><input type="text" id="i33" style="font-family:verdana;font-size:14px;text-align: center"  autocomplete="off" title="Proof Load /Ao" /></td>
+				<td id="t33"><input type="text" id="i33" style="font-family:verdana;font-size:14px;text-align: center"  autocomplete="off" title="Proof Load /A<sub>o</sub>" /></td>
 			</tr>
 			<tr>
 				<th >Tensile Strength(N/mm<sup>2</sup>)</th>
-				<td id="t44"><input type="text" id="i44" style="font-family:verdana;font-size:14px;text-align: center" autocomplete="off" title="Breaking Load /Ao"/></td>
+				<td id="t44"><input type="text" id="i44" style="font-family:verdana;font-size:14px;text-align: center" autocomplete="off" title="Breaking Load /A<sub>o</sub>"/></td>
 			</tr>
 			<tr>
 				<th >Secant Modulus(GPa)</th>
-				<td id="t55"><input type="text" id="i55"  style="font-family:verdana;font-size:14px;text-align: center" autocomplete="off" title="slope1*(1/LC)*(L/Ao)" /></td>
+				<td id="t55"><input type="text" id="i55"  style="font-family:verdana;font-size:14px;text-align: center" autocomplete="off" title="slope1*(1/LC)*(L/A<sub>o</sub>)" /></td>
 			</tr>
 			<tr>
 				<th >Tangent Modulus(GPa)</th>
-				<td id="t66"><input type="text" id="i66" style="font-family:verdana;font-size:14px;text-align: center"  autocomplete="off" title="slope2*(1/LC)*(L/Ao)" /></td>
+				<td id="t66"><input type="text" id="i66" style="font-family:verdana;font-size:14px;text-align: center"  autocomplete="off" title="slope2*(1/LC)*(L/A<sub>o</sub>)" /></td>
 			</tr>
 			<tr>
 				<th >Modulus of Elasticity(GPa)</th>
-				<td id="t77"><input type="text" id="i77" style="font-family:verdana;font-size:14px;text-align: center" autocomplete="off" title="slope3*(1/LC)*(L/Ao)" /></td>
+				<td id="t77"><input type="text" id="i77" style="font-family:verdana;font-size:14px;text-align: center" autocomplete="off" title="slope3*(1/LC)*(L/A<sub>o</sub>)" /></td>
 			</tr>
 		</table>
 	</form>
