--- a/src/lab/images/compms/index.html
+++ b/src/lab/images/compms/index.html
@@ -198,11 +198,11 @@
 	</tr>
 	</table>
 	</div>
-	<div id="mydiv3" style="position:absolute;left:5px; top:30px;height: 500px;width:700px;"></div>
-	<input type="button" id="obs1" value="Observation" style="position:absolute;font-family:verdana; font-size:14px;left:315px;top:450px;cursor:pointer;">
-	<input type="button" id="gr1" value="Graph" style="position:absolute;font-family:verdana; font-size:14px;left:415px;top:450px;cursor:pointer;">
-	<input type="button" id="check" value="Check" style="position:absolute;font-family:verdana; font-size:14px;left:515px;top:450px;cursor:pointer;">
-	<form id="calc" class="cc">
+	<div id="mydiv3" style="position:absolute;left:5px; top:30px;height: 500px;width:700px;display:none"></div>
+	<input type="button" id="obs1" value="Observation" style="position:absolute;font-family:verdana; font-size:14px;left:315px;top:450px;cursor:pointer;" onclick="viewObservation()">
+	<input type="button" id="gr1" value="Graph" style="position:absolute;font-family:verdana; font-size:14px;left:415px;top:450px;cursor:pointer;" onclick="viewGraph()">
+	<input type="button" id="check" value="Check" style="position:absolute;font-family:verdana; font-size:14px;left:515px;top:450px;cursor:pointer;" onmouseover="viewTooltip()" onclick="checkResult()">
+	<form id="calc">
 		<table border="border" id="last" style="position:absolute;font-family:verdana; font-size:14px;left:100px;top:150px;cellpadding:10px;cellspacing:10px;text-align:center">
 		<tr>
 			<th>Proof  Stress(N/mm<sup>2</sup>)</th>
