--- a/src/lab/index.html
+++ b/src/lab/index.html
@@ -230,7 +230,7 @@ $(document).ready(function()
  
     <div id="container"></div>
 	<div id="hidden-content"></div>
-	<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 SOLVE - The Virtual Lab at NITK Surathkal</div>
+	<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 - 2020 SOLVE - The Virtual Lab at NITK Surathkal</div>
     <!-- Javascript at the bottom for fast page loading -->
     <!--<script type="text/javascript" src="js/MathJax/MathJax.js"> -->
     <!-- </script> -->
